# uwb_init

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  package.xml
cfg/: UwbInit.cfg
docs/: CMakeLists.txt
docs/api-docs/: CMakeLists.txt  doxyfile.in
docs/pkg-docs/: CMakeLists.txt  doxyfile.in
docs/resources/: citations.bib
include/: uwb_init_cpp.hpp  uwb_init_ros.hpp  uwb_wrapper.hpp
include/options/: ls_solver_options.hpp  uwb_init_options.hpp
include/solvers/linear/: ls_solver.hpp
include/solvers/nonlinear/: nls_solver.hpp
include/types/: buffers.hpp  randomizer.hpp  types.hpp  uwb_anchor.hpp  uwb_data.hpp
include/types/buffers/: data_buffer.hpp  timed_buffer.hpp
include/uav_init/: uwb_init.cpp  uwb_init.hpp
include/utils/: colors.hpp  data_structs.hpp  logging.hpp  parse_ros.hpp  utils.h  utils.hpp
launch/: uwb_init.launch  uwb_init_debug.launch
msg/: UwbAnchor.msg
source/solvers/nonlinear/: nls_solver.cpp
src/: main.cpp  uwb_init_cpp.cpp  uwb_init_cpp_node.cpp  uwb_wrapper.cpp
uwb_init_lib/: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
uwb_init_lib/cmake/: EigenConfig.cmake  uwb_init_lib_config.cmake.in
uwb_init_lib/examples/: CMakeLists.txt
uwb_init_lib/examples/cmd/: CMakeLists.txt  main.cpp
uwb_init_lib/examples/cmd/data/: DS_TWR_pos.csv  DS_TWR_pos_sigma_T0.01.csv  DS_TWR_pos_sigma_T0.1.csv  DS_TWR_range.csv  DS_TWR_range_outliers_0.15_noise_d0.1_noise_T0.01.csv  DS_TWR_range_outliers_0.15_noise_d0.1_noise_T0.1.csv  DS_TWR_range_outliers_0_noise_d0.1_noise_T0.01.csv  DS_TWR_range_outliers_0_noise_d0.1_noise_T0.1.csv
uwb_init_lib/examples/cmd/include/: CLI11.hpp
uwb_init_lib/include/: uwb_init.hpp
uwb_init_lib/include/buffers/: timedbuffer.hpp
uwb_init_lib/include/logger/: logger.hpp
uwb_init_lib/include/options/: BiasType.hpp  InitMethod.hpp  RANSAC_Options.hpp  ls_solver_options.hpp  nls_solver_options.hpp  planner_options.hpp  uwb_init_options.hpp
uwb_init_lib/include/planners/: wps_gen.hpp
uwb_init_lib/include/solvers/linear/: ls_solver.hpp
uwb_init_lib/include/solvers/nonlinear/: nls_solver.hpp
uwb_init_lib/include/types/: buffers.hpp  types.hpp  uwb_anchor.hpp  uwb_data.hpp
uwb_init_lib/include/types/buffers/: data_buffer.hpp  simple_buffer.hpp  timed_buffer.hpp
uwb_init_lib/include/utils/: data_structs.hpp  logger.hpp  ls_solver.hpp  nls_solver.hpp  utils.h  utils.hpp
uwb_init_lib/source/: uwb_init.cpp
uwb_init_lib/source/options/: BiasType.cpp  RANSAC_Options.cpp
uwb_init_lib/source/planners/: wps_gen.cpp
uwb_init_lib/source/solvers/linear/: ls_solver.cpp
uwb_init_lib/source/solvers/nonlinear/: nls_solver.cpp
uwb_init_lib/source/utils/: ls_solver.cpp  nls_solver.cpp  utils.cpp
uwb_init_lib/test/: test_eigen.cpp  test_init.cpp  test_utils.cpp  test_wps_gen.cpp
uwb_init_ros/: CMakeLists.txt  package.xml
uwb_init_ros/config/: uwb_anchors.csv  uwb_anchors.yaml
uwb_init_ros/include/: options.hpp  utilities.hpp  uwb_init_ros.hpp
uwb_init_ros/include/utils/: options.hpp
uwb_init_ros/launch/: uwb_init.launch
uwb_init_ros/msg/: UwbAnchor.msg  UwbAnchorArrayStamped.msg
uwb_init_ros/src/: uwb_init_ros.cpp  uwb_init_ros_node.cpp
uwb_init_trigger/: CMakeLists.txt  LICENSE  README.md  package.xml
uwb_init_trigger/cfg/: dyn_config.cfg
uwb_init_trigger/config/: default_config.yaml
uwb_init_trigger/include/uwb_init_trigger/: ROSnode.hpp
uwb_init_trigger/launch/: default.launch
uwb_init_trigger/src/: ROSnode.cpp  main.cpp
